force-app/main/default/objects/Clients_with_Brokers__c/Clients_with_Brokers__c.object-meta.xml
<CustomObject>
    <label>Clients or Prospects with Brokers</label>
    <nameField>
        <displayFormat>CB ID - {0000}</displayFormat>
        <label>Clients with Brokers ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients or Prospects with Brokers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>