force-app/main/default/objects/Clients_with_Brokers__c/fields/Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Lead_status__c</fullName>
    <formula>TEXT(Lead__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead status</label>
    <type>Text</type>
</CustomField>