force-app/main/default/objects/Clients_with_Brokers__c/fields/Primary_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Broker Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Broker__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients_or_Prospects_with_Brokers</relationshipLabel>
    <relationshipName>Clients_or_Prospects_with_Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>