force-app/main/default/objects/Clients_with_Brokers__c/validationRules/Lead_and_client_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_and_client_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>Or (AND(ISBLANK(Lead__c) ,ISBLANK( Client__c )),  AND (ISBLANK(Lead__c) ,ISBLANK( Client__c )))</errorConditionFormula>
    <errorMessage>Either of them should be filled.(Not both of them)</errorMessage>
</ValidationRule>